--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.10.0",
     "react-icons": "^5.3.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.4",
